--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "daisyui": "^1.16.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.5.4"
   }
